# Multi-Agentic-Real-Estate-Chatbot

./: .gitignore  .txt  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
agents/: __init__.py  faq_agent.py  prompts.py  router.py  vision_agent.py
config/: settings.py
data/: tenancy_faqs.txt
graph/: __init__.py  workflow.py
models/: __init__.py  inputs.py  outputs.py  state.py
tests/: test_agents.py
utils/: __init__.py  image_utils.py  validators.py
